# afad-toplanma-alani-acik-veri

./: .gitignore  README.md  cities.json  collect.py  consts.py  pyproject.toml  requirements.txt  scraper.py
iller/: Adana.json  Adiyaman.json  Diyarbakir.json  Gaziantep.json  Hatay.json  Kahramanmaras.json  Kilis.json  Malatya.json  Osmaniye.json  Sanliurfa.json
