[tool.poetry]
name = "afad toplanma alanı açık veri"
version = "0.1.0"
description = ""
authors = ["Kürşat Vuruşan <kursat@pm.me>", "Ahsen Tekdemir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
unidecode = "^1.3.6"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
